[package]
name = "raytracing-in-one-weekend"
version = "0.1.0"
rust-version = "1.96"
edition = "2024"
license = "ISC"
authors = ["Anthony DeDominic"]

[features]
default = ["progress"]
progress = ["dep:indicatif"]


[dependencies]
miniz_oxide = "0.9"
crc32fast = "1"
rand = "0.10"
rayon = "1"
indicatif = { version = "0.18", optional = true }
glam = "0.32"
bon = "3.9"
